# fys5429

./: .gitignore  CLAUDE.md  README.md  plot_collocation.py  pyproject.toml  requirements.txt
code/data/: data.txt
code/data/processed/: README.md
code/data/raw/: README.md
code/docs/: CLAUDE.md  pinn.md  results.md  setup.md
code/illustrations/: plot_option_distribution.py
code/models/: heston_recovered_params.json
code/notebooks/: black.ipynb  brown.ipynb  brownian.ipynb  bs.ipynb  generate.ipynb  generate_hs.ipynb  generate_inv.ipynb  greeks.ipynb  heston.ipynb  hs.ipynb  hyper_bs.ipynb  hyper_bs_1_arch.ipynb  hyper_bs_2_lr.ipynb  hyper_bs_3_lambda.ipynb  hyper_bs_4_conv.ipynb  hyper_hs_1_arch.ipynb  hyper_hs_2_lr.ipynb  hyper_hs_3_lambda.ipynb  hyper_hs_4_conv.ipynb  hyper_inv_1_data.ipynb  pinn_bs.ipynb  pinn_hs.ipynb  pinn_inv.ipynb
code/plots/: plots.txt
code/plots/pinn/: bs_pinn.pt  heston_pinn.pt
code/scripts/: __init__.py  activations.py  bm.py  bs.py  bspinn.py  calibrate.py  data_simulation.py  export_all.py  generate.py  greeks.py  heston.py  hspinn.py  invpinn.py  metrics.py  pinn-bs.py  pinn_bs.py  pinn_heston.py  pipeline.py  pipeline_calibrate.py  pipeline_heston.py  run.py  run_all.py  sample.py  scripts.txt  style.py  train_bs.py  train_hs.py  train_inv.py  utils.py
project1/: project1.txt
project1/code/notebooks/: notebooks.txt
project2/: project2.txt
project2/code/data/: data.txt
project2/code/notebooks/: notebooks.txt
project2/code/plots/: plots.txt
project2/code/scripts/: scripts.txt
(+1 files in other folders)
